Criado a model de categoria; Criado o Controller de Categoria com os métodos create e list

--- a/FRONT/src/app/components/views/produto/listar-produto/listar-produto.component.html
+++ b/FRONT/src/app/components/views/produto/listar-produto/listar-produto.component.html
@@ -2,7 +2,9 @@
 
 <ol>
     <li *ngFor="let produto of produtos">
-        {{ produto.nome }}
+        Nome: {{ produto.nome }}
+        Quantidade: {{produto.quantidade}}
+        Preco: {{produto.preco}}
         <!-- <a routerLink="/produto/cadastrar/{{ produto.id }}">Novo Produto</a> -->
     </li>
 </ol>
