projeto atualizado até a aula do dia 12/10

--- a/FRONT/src/app/app.component.html
+++ b/FRONT/src/app/app.component.html
@@ -1,5 +1,1 @@
-<header>Cabeçalho</header>
-<nav>Navegação</nav>
-<router-outlet></router-outlet>
-<!-- Espaço reservado para o conteúdo dinâmico (componentes - views) -->
-<footer>Rodapé</footer>
+<app-template></app-template>
