--- a/FRONT/src/app/components/views/produto/cadastrar-produto/cadastrar-produto.component.html
+++ b/FRONT/src/app/components/views/produto/cadastrar-produto/cadastrar-produto.component.html
@@ -14,6 +14,13 @@
     <label for="preco">Preço:</label>
     <input type="text" name="preco" [(ngModel)]="preco" />
 </div>
+<div id="categoria">
+    <label for="categoria">Categoria:</label>
+    <select [(ngModel)]="categoriaId" name="categoria">
+        <option *ngFor="let categoria of categorias" value="{{ categoria.id }}"> {{categoria.nome}}</option>
+    </select>
+    <!-- <input type="text" name="categoria" [(ngModel)]="categoria" /> -->
+</div>
 <div id="botaoCadastrar">
     <button (click)="create()">Cadastrar</button>
 </div>
