--- a/FRONT/src/app/components/views/produto/listar-produto/listar-produto.component.html
+++ b/FRONT/src/app/components/views/produto/listar-produto/listar-produto.component.html
@@ -1,10 +1,35 @@
-<a routerLink="/produto/cadastrar">Novo Produto</a>
+<table mat-table [dataSource]="produtos" class="mat-elevation-z8">
+    <!-- Coluna do ID -->
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <td mat-cell *matCellDef="let produto"> {{produto.id}} </td>
+    </ng-container>
+    <!-- Coluna do Nome -->
+    <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef> Nome </th>
+        <td mat-cell *matCellDef="let produto"> {{produto.nome}} </td>
+    </ng-container>
+    <!-- Coluna da Descrição -->
+    <ng-container matColumnDef="descricao">
+        <th mat-header-cell *matHeaderCellDef> Descrição </th>
+        <td mat-cell *matCellDef="let produto"> {{produto.descricao}} </td>
+    </ng-container>
+    <!-- Coluna da Preco -->
+    <ng-container matColumnDef="preco">
+        <th mat-header-cell *matHeaderCellDef> Preço </th>
+        <td mat-cell *matCellDef="let produto"> {{produto.preco}} </td>
+    </ng-container>
+    <!-- Coluna da Quantidade -->
+    <ng-container matColumnDef="quantidade">
+        <th mat-header-cell *matHeaderCellDef> Quantidade </th>
+        <td mat-cell *matCellDef="let produto"> {{produto.quantidade}} </td>
+    </ng-container>
+    <!-- Coluna da Categoria -->
+    <ng-container matColumnDef="categoria">
+        <th mat-header-cell *matHeaderCellDef> Categoria </th>
+        <td mat-cell *matCellDef="let produto"> {{produto.categoria!.nome}} </td>
+    </ng-container>
 
-<ol>
-    <li *ngFor="let produto of produtos">
-        Nome: {{ produto.nome }}
-        Quantidade: {{produto.quantidade}}
-        Preco: {{produto.preco}}
-        <!-- <a routerLink="/produto/cadastrar/{{ produto.id }}">Novo Produto</a> -->
-    </li>
-</ol>
+    <tr mat-header-row *matHeaderRowDef="colunasExibidas"></tr>
+    <tr mat-row *matRowDef="let row; columns: colunasExibidas;"></tr>
+</table>
